# epd_firmware

./: Cargo.toml  LICENSE  README.md  launcher.x  memory.x
eepy/: .gdbinit  Cargo.toml  core1.gdbinit
eepy-derive/: Cargo.toml
eepy-derive/src/: lib.rs
eepy-example-app/: Cargo.toml  build.sh  program.x
eepy-example-app/src/: main.rs
eepy-gui/: Cargo.toml
eepy-gui/src/: draw_target.rs
eepy-gui/src/element/: button.rs  mod.rs  slider.rs
eepy-launcher/: Cargo.toml  build.sh
eepy-launcher/.cargo/: config.toml
eepy-launcher/src/: main.rs  serial.rs
eepy-launcher/src/ui/: flashing.rs  mod.rs
eepy-launcher/src/ui/page/: about.rs  app_info.rs  main.rs  mod.rs  scratchpad.rs
eepy-serial/: Cargo.toml
eepy-serial-host/: Cargo.toml
eepy-serial-host/src/: image.rs  input.rs  lib.rs  program_upload.rs
eepy-serial/src/: lib.rs
eepy-sys/: Cargo.toml
eepy-sys/src/: critical_section.rs  critical_section_impl.rs  exec.rs  flash.rs  header.rs  image.rs  input.rs  input_common.rs  kv_store.rs  lib.rs  misc.rs  syscall.rs  usb.rs
eepy-sys/src/syscall/: mod.rs
eepy/.cargo/: config.toml
eepy/src/: core1.rs  exception.rs  flash.rs  gpio_irq.rs  gui.rs  launcher.rs  main.rs  programs.rs  ringbuffer.rs  serial.rs  syscall.rs  syscall.s  temp.rs  tickv.rs  usb.rs  usb.s
eepy/src/syscall/: cs.rs  exec.rs  flash.rs  image.rs  input.rs  kv_store.rs  misc.rs
eepytool/: Cargo.toml
eepytool/src/: main.rs
elf2epb/: Cargo.toml
elf2epb/src/: main.rs
fw16-epd-bsp/: Cargo.toml
fw16-epd-bsp/src/: lib.rs
fw16-epd-example-app/: Cargo.toml  build.rs  build.sh
fw16-epd-example-app/src/: main.rs
fw16-epd-gui/: Cargo.toml
fw16-epd-gui/src/: draw_target.rs  lib.rs
fw16-epd-gui/src/element/: button.rs  mod.rs  slider.rs
fw16-epd-main/: Cargo.toml
fw16-epd-main/.cargo/: config.toml
fw16-epd-main/src/: gui.rs  main.rs  programs.rs  ringbuffer.rs  serial.rs
fw16-epd-program-interface/: Cargo.toml
fw16-epd-program-interface/src/: eg.rs  lib.rs
fw16-epd-serial-common/: Cargo.toml
pervasive-spi/: Cargo.toml
pervasive-spi/src/: lib.rs  rp2040.rs
tp370pgh01/: Cargo.toml
tp370pgh01/src/: lib.rs  rp2040.rs
