[workspace]
resolver = "2"

members = [
    "fw16-epd-bsp",
    "eepy",
    "eepy-sys",
    "eepy-serial",
    "eepy-gui",
    "eepy-example-app",
    "elf2epb",
    "pervasive-spi",
    "tp370pgh01", "eepy-launcher",
]

[workspace.dependencies]
rp2040-hal = "0.11"
rp2040-flash = { path = "/home/arthomnix/git/rp2040-flash" }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
critical-section = "1.2"
portable-atomic = { version = "1.10", features = ["critical-section"] }
mcp9808 = "0.4"
usb-device = "0.3"
usbd-serial = "0.2"
crc32fast = { version = "1.4", default-features = false }
embedded-graphics = "0.8.1"
heapless = "0.8"
once_cell = { version = "1.20", default-features = false, features = ["critical-section", "portable-atomic"] }
postcard = "1.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
