[package]
name = "eepy-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
eepy-sys = { path = "../eepy-sys", features = ["critical-section-impl"] }
eepy-gui = { path = "../eepy-gui" }
eepy-serial = { path = "../eepy-serial" }
embedded-graphics.workspace = true
usb-device.workspace = true
usbd-serial.workspace = true
portable-atomic.workspace = true
heapless.workspace = true
postcard.workspace = true
panic-halt = "1.0"