[package]
name = "eepy-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
tp370pgh01 = { path = "../tp370pgh01" }
defmt = { workspace = true, optional = true }
embedded-graphics = { workspace = true, optional = true }
serde.workspace = true
crc32fast.workspace = true
usb-device.workspace = true

[features]
defmt = ["dep:defmt", "usb-device/defmt"]