[package]
name = "eepy-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
tp370pgh01 = { path = "../tp370pgh01" }
defmt = { workspace = true, optional = true }
embedded-graphics = { workspace = true, optional = true }
serde.workspace = true
crc32fast.workspace = true
usb-device.workspace = true
critical-section = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
strum.workspace = true
tickv = { workspace = true, optional = true }
fugit = { workspace = true, optional = true }

[features]
defmt = ["dep:defmt", "usb-device/defmt", "fugit/defmt", "embedded-graphics/defmt"]
critical-section-impl = ["critical-section", "critical-section/restore-state-bool", "once_cell"]