[package]
name = "eepy"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
fw16-epd-bsp = { path = "../fw16-epd-bsp" }
eepy-sys = { path = "../eepy-sys", features = ["defmt"] }
eepy-gui = { path = "../eepy-gui", features = ["defmt-derive"] }
eepy-serial = { path = "../eepy-serial" }
tp370pgh01 = { path = "../tp370pgh01", features = ["rp2040", "defmt"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
rp2040-flash.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
critical-section.workspace = true
portable-atomic.workspace = true
mcp9808.workspace = true
usb-device.workspace = true
usbd-serial.workspace = true
crc32fast.workspace = true
embedded-graphics = { workspace = true, features = ["defmt"] }
heapless.workspace = true
once_cell.workspace = true