[package]
name = "eepy"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
fw16-epd-bsp = { path = "../fw16-epd-bsp", features = ["defmt"] }
eepy-sys = { path = "../eepy-sys", features = ["defmt", "tickv"] }
tp370pgh01 = { path = "../tp370pgh01", features = ["rp2040", "defmt"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
rp2040-flash.workspace = true
embedded-hal.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
critical-section.workspace = true
portable-atomic.workspace = true
usb-device = { workspace = true, features = ["defmt"] }
once_cell.workspace = true
mcp9808.workspace = true
tickv.workspace = true
siphasher.workspace = true
strum.workspace = true