[package]
name = "fw16-epd-main"
version = "0.1.0"
edition = "2021"

[dependencies]
fw16-epd-bsp = { path = "../fw16-epd-bsp" }
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
embedded-hal-bus.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true