[package]
name = "fw16-epd-main"
version = "0.1.0"
edition = "2021"

[dependencies]
fw16-epd-bsp = { path = "../fw16-epd-bsp" }
tp370pgh01 = { path = "../tp370pgh01", features = ["rp2040"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
embedded-hal-bus.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
critical-section.workspace = true
portable-atomic.workspace = true
mcp9808.workspace = true
usb-device.workspace = true
usbd-serial.workspace = true