[package]
name = "fw16-epd-main"
version = "0.1.0"
edition = "2021"

[dependencies]
fw16-epd-bsp = { path = "../fw16-epd-bsp" }
fw16-epd-program-interface = { path = "../fw16-epd-program-interface", features = ["embedded-graphics"] }
tp370pgh01 = { path = "../tp370pgh01", features = ["rp2040"] }
cortex-m.workspace = true
cortex-m-rt.workspace = true
rp2040-flash.workspace = true
embedded-hal.workspace = true
embedded-hal-bus.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
critical-section.workspace = true
portable-atomic.workspace = true
mcp9808.workspace = true
usb-device.workspace = true
usbd-serial.workspace = true
crc32fast.workspace = true
embedded-graphics.workspace = true